@@ -7,6 +7,8 @@ Changes in DBD-Oracle XXX
  [BUG FIXES]
  - support development release versions in GetInfo (Martin J. Evans)
  - don't gag diag() on the tests by default
+ - SKIP condition in 10general.t was reversed (reported by Alois) [RT#46761]
+ - Check for LD_LIBRARY_PATH_(32|64) as well for solaris [RT#46761]
 
 Changes in DBD-Oracle 1.30
   [DOCUMENTATION]
